# socially-aware-walker

./: .gitignore  README.md  docker_run.sh  set_port.sh
Dockerfiles/: Dockerfile-cuda10  docker_build.sh
bags/: record_bag.sh
catkin_ws/: compile_py36.sh  csv_analysis.py  csv_analysis_sim2.py  force_analysis.py
catkin_ws/src/active_walker/: CMakeLists.txt  package.xml
catkin_ws/src/active_walker/launch/: joystick_control.launch  sensors_hokuyo.launch  sensors_ydlidar.launch  sensors_ydlidar_force.launch  walker_motor_imu.launch  walker_sensors_all.launch
catkin_ws/src/active_walker/rviz/: default_setting.rviz
catkin_ws/src/active_walker/src/: fake_odom_node.py  scan_image_combine_node.cpp  scan_image_combine_node_20201119backup.cpp
catkin_ws/src/control/motors/mcbl3006s_drivers/: CMakeLists.txt  package.xml
catkin_ws/src/control/motors/mcbl3006s_drivers/config/mcdc3006s/: configMCDC3006S.yaml
catkin_ws/src/control/motors/mcbl3006s_drivers/include/mcdc3006s_drivers/: mcdc3006s.h  mcdc3006s_data.h  mcdc3006s_mock.h  motor_driver_interface.h
catkin_ws/src/control/motors/mcbl3006s_drivers/launch/: motor_driver.launch
catkin_ws/src/control/motors/mcbl3006s_drivers/src/: CMakeLists.txt  differential_drive_node.cpp  differential_drive_node.hpp  mcdc3006s.cpp
catkin_ws/src/control/motors/mcbl3006s_drivers/src/test/: CMakeLists.txt  test_manual_mcdc3006s.cpp
catkin_ws/src/control/motors/sr_common_drivers/: AUTHORS.md  README.md
catkin_ws/src/control/motors/sr_common_drivers/sr_communications/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
catkin_ws/src/control/motors/sr_common_drivers/sr_communications/include/sr_communications/: common_errors.h
catkin_ws/src/control/motors/sr_common_drivers/sr_communications/include/sr_communications/ipc/: semaphores.h
catkin_ws/src/control/motors/sr_common_drivers/sr_communications/include/sr_communications/serial_port/: rs232.h
catkin_ws/src/control/motors/sr_common_drivers/sr_communications/src/: CMakeLists.txt
catkin_ws/src/control/motors/sr_common_drivers/sr_communications/src/ipc/: CMakeLists.txt  semaphores.c
catkin_ws/src/control/motors/sr_common_drivers/sr_communications/src/ipc/test/: CMakeLists.txt  test_manual_semaphores.c
catkin_ws/src/control/motors/sr_common_drivers/sr_communications/src/serial_port/: CMakeLists.txt  rs232.cpp
catkin_ws/src/control/motors/sr_common_drivers/sr_communications/src/serial_port/test/: CMakeLists.txt  test_manual_rs232.cpp  test_manual_screen.cpp
catkin_ws/src/control/path_finding/: CMakeLists.txt  package.xml
catkin_ws/src/control/path_finding/cfg/: footprint.yaml
catkin_ws/src/control/path_finding/launch/: astar_path_finding_comfort_based.launch  astar_path_finding_only_scan.launch  astar_path_finding_with_original_proxemics.launch  astar_path_finding_with_social_proxemics.launch
catkin_ws/src/control/path_finding/src/: Astar.cpp  Astar.hpp  a_star.cpp  a_star.hpp  fake_map.cpp  localmap_utils.cpp  localmap_utils.hpp  path_finding_node.cpp  path_finding_node_backup.cpp  scan2comfortmap_node.cpp  scan2localmap_node.cpp  social_agf_visualization.py
catkin_ws/src/control/path_tracking/: CMakeLists.txt  package.xml
catkin_ws/src/control/path_tracking/config/: walker_dynamics.yaml
catkin_ws/src/control/path_tracking/launch/: path_tracking.launch  path_tracking_autonomous.launch  path_tracking_only_heading_error.launch  path_tracking_with_user_pushing.launch  path_tracking_with_user_pushing_real.launch  path_tracking_with_user_pushing_sim.launch
catkin_ws/src/control/path_tracking/src/: crosstrack_convergence_visualization.py  fake_path_node.py  force2cmd_node.py  pushing_action_simulation_node.py  robot_force_synchronizer.py  stanley_control_node.py  stanley_control_node_deprecated.py  stanley_steering_control_node.py  steering_control_autonomous_node.py  steering_control_only_heading_error.py  steering_control_with_user_pushing_node.py
catkin_ws/src/deep_learning/sarl_ros/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/deep_learning/sarl_ros/launch/: sarl.launch
catkin_ws/src/deep_learning/sarl_ros/src/: sarl_node.py  scan2observation_node.cpp
catkin_ws/src/deep_learning/yolov4_pytorch/: CMakeLists.txt  package.xml
catkin_ws/src/deep_learning/yolov4_pytorch/cfg/: yolov4-custom.cfg  yolov4-tiny.cfg  yolov4.cfg
catkin_ws/src/deep_learning/yolov4_pytorch/src/: README.md  detection_node.py  requirements.txt
catkin_ws/src/deep_learning/yolov4_pytorch/weights/: README.md  download_weights.py
catkin_ws/src/localization/robot_localization/: CMakeLists.txt
catkin_ws/src/localization/robot_localization/launch/: ekf_walker.launch
catkin_ws/src/localization/robot_localization/params/: ekf_walker.yaml
catkin_ws/src/multi_object_tracking/: CMakeLists.txt  package.xml
catkin_ws/src/multi_object_tracking/launch/: mot2d.launch  mot2d_sim.launch
catkin_ws/src/multi_object_tracking/src/: mot2d_node.py  mot_node_old.py
catkin_ws/src/multi_object_tracking/src/AB3DMOT_libs/: kalman_filter.py  kalman_filter_old.py  model.py  model_old.py
catkin_ws/src/sensors/dynpick_driver/: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
catkin_ws/src/sensors/dynpick_driver/doc/: conf.py  index.rst  manifest.yaml
catkin_ws/src/sensors/dynpick_driver/launch/: driver.launch  sample.launch  sample.rviz
catkin_ws/src/sensors/dynpick_driver/src/: force2cmd_node.py  force_filtering_node.py  force_v_extraction.py  kbhit.c  main.cpp  pushing_action_simulation_node.py  test-com.c
catkin_ws/src/sensors/dynpick_driver/urdf/: dynpick_WEF-6A200.xacro  dynpick_WEF-6A200_macro.xacro
catkin_ws/src/sensors/hokuyo_node/launch/: laserscan.launch
catkin_ws/src/simulation/walker_description/: CMakeLists.txt  package.xml  urdf.rviz
catkin_ws/src/walker_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/walker_msgs/msg/: BBox2D.msg  Det3D.msg  Det3DArray.msg  Detection2D.msg  Trk3D.msg  Trk3DArray.msg
catkin_ws/src/walker_msgs/srv/: Detection2DTrigger.srv  PushingActionTrigger.srv
(+106 files in other folders)
